test/programs/invalid/_custom/abstract_body.java
public class AbstractBody {
    public AbstractBody() {}

    public abstract void m() { return; }
}
